Начал делать документацию через SWAGGER. Задокументировал статусы и опыт
